--- a/foundry.toml
+++ b/foundry.toml
@@ -4,6 +4,7 @@ out = "out"
 libs = ["lib"]
 remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts", 
 "@uniswap/v2-core=lib/v2-core", "@uniswap/v2-periphery=lib/v2-periphery", "@uniswap/lib=lib/solidity-lib"]
+fs_permissions = [{ access = "read", path = "./broadcast" }, { access = "read", path = "./out" }]
 gas_reports = ["RayFi"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
