added more invariant testing and remappings file for vscode

--- a/foundry.toml
+++ b/foundry.toml
@@ -7,4 +7,8 @@ remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
 fs_permissions = [{ access = "read", path = "./broadcast" }, { access = "read", path = "./out" }]
 gas_reports = ["RayFi"]
 
+[profile.default.invariant]
+runs = 256
+depth = 16
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
