--- a/foundry.toml
+++ b/foundry.toml
@@ -2,9 +2,17 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts", 
-"@uniswap/v2-core=lib/v2-core", "@uniswap/v2-periphery=lib/v2-periphery", "@uniswap/lib=lib/solidity-lib"]
-fs_permissions = [{ access = "read", path = "./broadcast" }, { access = "read", path = "./out" }]
+remappings = [
+    "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
+    "@uniswap/v2-core=lib/v2-core",
+    "@uniswap/v2-periphery=lib/v2-periphery",
+    "@uniswap/lib=lib/solidity-lib",
+    "@poppunkllc/gaslitedrop=lib/gaslitedrop",
+]
+fs_permissions = [
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./out" },
+]
 gas_reports = ["RayFi"]
 
 [profile.default.invariant]
