--- a/.gitmodules
+++ b/.gitmodules
@@ -6,13 +6,13 @@
 	url = https://github.com/openzeppelin/openzeppelin-contracts
 [submodule "lib/v2-core"]
 	path = lib/v2-core
-	url = https://github.com/Uniswap/v2-core
+	url = https://github.com/uniswap/v2-core
 [submodule "lib/v2-periphery"]
 	path = lib/v2-periphery
-	url = https://github.com/Uniswap/v2-periphery
+	url = https://github.com/uniswap/v2-periphery
 [submodule "lib/solidity-lib"]
 	path = lib/solidity-lib
-	url = https://github.com/Uniswap/solidity-lib
+	url = https://github.com/uniswap/solidity-lib
 [submodule "lib/foundry-devops"]
 	path = lib/foundry-devops
 	url = https://github.com/Cyfrin/foundry-devops
